--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
         <enum name="info" value="2"/>
         <enum name="warning" value="3"/>
         <enum name="danger" value="4"/>
+        <enum name="regular" value="5"/>
     </attr>
 
     <attr name="bootstrapType" format="enum">
