--- a/sample/src/main/res/layout/example_bprogress.xml
+++ b/sample/src/main/res/layout/example_bprogress.xml
@@ -26,6 +26,7 @@
             android:id="@+id/example_progress_default"
             style="@style/progress_example"
             app:progress="25"
+            app:bootstrapBrand="success"
             />
     </LinearLayout>
 
@@ -45,6 +46,7 @@
             style="@style/progress_example"
             app:animated="true"
             app:progress="40"
+            app:bootstrapBrand="primary"
             />
     </LinearLayout>
 
@@ -64,6 +66,7 @@
             style="@style/progress_example"
             app:progress="60"
             app:striped="true"
+            app:bootstrapBrand="info"
             />
     </LinearLayout>
 
@@ -84,6 +87,7 @@
             app:animated="true"
             app:progress="78"
             app:striped="true"
+            app:bootstrapBrand="warning"
             />
     </LinearLayout>
 
@@ -91,17 +95,26 @@
         style="@style/progress_weight_container">
 
         <Button
-            android:id="@+id/example_progress_change_btn"
+            android:id="@+id/example_progress_change_type_btn"
             style="@style/description_label"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:text="Change (click bar)"
+            android:text="Type"
+            />
+
+        <Button
+            android:id="@+id/example_progress_change_color_btn"
+            style="@style/description_label"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:text="Color"
             />
 
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
             android:id="@+id/example_progress_change"
             style="@style/progress_example"
-            app:progress="44"
+            app:progress="75"
+            app:bootstrapBrand="danger"
             />
     </LinearLayout>
 
