--- a/sample/src/main/res/layout/example_blabel.xml
+++ b/sample/src/main/res/layout/example_blabel.xml
@@ -205,7 +205,7 @@
             android:layout_weight="1"
             android:gravity="center"
             app:bootstrapBrand="success"
-            app:bootstrapText="Weight 1 {fa-gift}"
+            app:bootstrapText="Weight 1 {fa_gift}"
             />
 
         <com.beardedhen.androidbootstrap.BootstrapLabel
@@ -215,7 +215,7 @@
             android:layout_weight="2"
             android:gravity="center"
             app:bootstrapBrand="primary"
-            app:bootstrapText="{fa-play} Weight 2 {fa-group}"
+            app:bootstrapText="{fa_play} Weight 2 {fa_group}"
             />
     </LinearLayout>
 
